# up-skill

./: .clang-format  .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  LICENSE  Makefile  README.md  biome.json  build.ts  dev.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsdown.config.ts  vitest.config.ts
src/algorithms/sort/: README.md  selection-sort.c  selection-sort.cpp
src/algorithms/sort/selection-sort/: selection-sort.py
src/algorithms/sort/selection_sort/: README.md  __init__.py  selection_sort.c  selection_sort.h
src/linked-list-cycle/: linked-list-cycle.md
src/longest-substring-without-repeating-characters/: longest-substring-without-repeating-characters.md  longest-substring-without-repeating-characters.ts
src/problems/linked-list-cycle/: linked-list-cycle.ts
src/problems/linked_list_cycle/: linked_list_cycle.ts
src/problems/longest_substring_without_repeating_characters/: longest_substring_without_repeating_characters.ts
src/problems/merge_two_sorted_lists/: README.md  merge_two_sorted_lists.ts
src/problems/two-sum/: README.md
src/problems/two_sum/: two_sum.c  two_sum.ts
src/problems/valid-parentheses/: valid-parentheses.c  valid-parentheses.h  valid-parentheses.md  valid-parentheses.ts
src/problems/valid_palindrome/: valid_palindrome.c  valid_palindrome.ts
src/problems/valid_parentheses/: valid_parentheses.c  valid_parentheses.ts
src/two-sum/: two-sum.c  two-sum.md  two-sum.ts
src/utils/: classes.ts
src/valid-palindrome/: valid-palindrome.c  valid-palindrome.h  valid-palindrome.md  valid-palindrome.ts
src/valid-parentheses/: valid-parentheses.ts
tests/: .oxlintrc.json
tests/algorithms/sort/: selection-sort.test.cpp  selection_sort.test.cpp  selection_sort_test.py  test_selection_sort.py
tests/linked-list-cycle/: linked-list-cycle.test.ts
tests/longest-substring-without-repeating-characters/: longest-substring-without-repeating-characters.test.ts
tests/problems/linked-list-cycle/: linked-list-cycle.test.ts
tests/problems/linked_list_cycle/: linked_list_cycle.test.ts
tests/problems/longest-substring-without-repeating-characters/: longest-substring-without-repeating-characters.test.ts
tests/problems/longest_substring_without_repeating_characters/: longest_substring_without_repeating_characters.test.ts
tests/problems/merge_two_sorted_lists/: merge_two_sorted_lists.test.ts
tests/problems/two-sum/: two-sum-test.cpp  two-sum.test.cpp  two-sum.test.ts
tests/problems/two_sum/: two_sum.test.cpp  two_sum.test.ts
tests/problems/valid-palindrome/: valid-palindrome-test.cpp  valid-palindrome.test.cpp  valid-palindrome.test.ts
tests/problems/valid-parentheses/: valid-parentheses-test.cpp  valid-parentheses.test.cpp  valid-parentheses.test.ts
tests/problems/valid_palindrome/: valid_palindrome.test.cpp  valid_palindrome.test.ts
tests/problems/valid_parentheses/: valid_parentheses.test.cpp  valid_parentheses.test.ts
tests/two-sum/: two-sum-test.cpp  two-sum.test.ts
tests/valid-palindrome/: valid-palindrome-test.cpp  valid-palindrome.test.ts
tests/valid-parentheses/: valid-parentheses-test.cpp  valid-parentheses.test.ts
